[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "daebus"
version = "0.0.1"
authors = [
  { name="Tom West", email="tom@bambo.co" },
]
description = "A simple way to build python services running on a raspberry pi."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "redis>=5.0.0",
]
[project.urls]
Homepage = "https://github.com/twestos/daebus"
Issues = "https://github.com/twestos/daebus/issues"