[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "daebus"
version = "0.0.14"
authors = [
  { name="Tom West", email="tom@bambo.co" },
]
description = "A lightweight framework for building Python background services with a Flask-like API, enabling seamless inter-service communication via Redis pub/sub."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "redis>=6.0.0",
    "apscheduler>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.1.1",
    "bump2version>=1.0.1",
    "codecov>=2.1.13",
    "flake8>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/twestos/daebus"
Issues = "https://github.com/twestos/daebus/issues"

